--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     font-family: 'Montserrat', sans-serif;
     margin: 0 auto; 
     max-width: 1300px;
+    background: linear-gradient(#888888, #FEFEFE);
 }
 
 .caja{
